Modify build.sbt